Added link to Github and Linkedin

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     </head>
     <body>
         <h1>Welcome to New York</h1>
+        <footer>
+            This project was coded by
+            <a href="https://www.linkedin.com/in/lisalowagie">Lisa Lowagie</a>
+            and is open-sourced on
+            <a href="https://github.com/LisaLowagie/TravelProject">Github</a>.
+        </footer>
     </body>
 </html>
