Added subtitle to homepage

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <h1>Welcome to New York</h1>
+        <h2>The most popular city in the United States.</h2>
         <footer>
             This project was coded by
             <a href="https://www.linkedin.com/in/lisalowagie">Lisa Lowagie</a>
