--- a/index.html
+++ b/index.html
@@ -13,13 +13,22 @@
         <title>Welcome to New York</title>
     </head>
     <body>
-        <h1>Welcome to New York</h1>
-        <h2>The most popular city in the United States.</h2>
-        <footer>
-            This project was coded by
-            <a href="https://www.linkedin.com/in/lisalowagie">Lisa Lowagie</a>
-            and is open-sourced on
-            <a href="https://github.com/LisaLowagie/TravelProject">Github</a>.
-        </footer>
+        <div class="container">
+            <header>
+                <h3>.Travel.</h3>
+                <h1>Welcome to New York</h1>
+                <h2>The most popular city in the United States.</h2>
+                <a href="#more">Learn more</a>
+            </header>
+            <footer>
+                This project was coded by
+                <a href="https://www.linkedin.com/in/lisalowagie"
+                    >Lisa Lowagie</a
+                >
+                and is open-sourced on
+                <a href="https://github.com/LisaLowagie/TravelProject">Github</a
+                >.
+            </footer>
+        </div>
     </body>
 </html>
