--- a/index.html
+++ b/index.html
@@ -21,13 +21,64 @@
                 <a href="#more">Learn more</a>
             </header>
             <footer>
-                This project was coded by
-                <a href="https://www.linkedin.com/in/lisalowagie"
-                    >Lisa Lowagie</a
-                >
-                and is open-sourced on
-                <a href="https://github.com/LisaLowagie/TravelProject">Github</a
-                >.
+                <section class="grid">
+                    <div>
+                        <h3>More about New York</h3>
+                        <ul>
+                            <li>
+                                <a
+                                    href="https://www.jfkairport.com/"
+                                    target="_blank"
+                                    >John F. Kennedy Airport</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://maps.app.goo.gl/pXjCVd8FmaEm7Npr9"
+                                    target="_blank"
+                                    >Map of New York</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.urbanrail.net/am/nyrk/new-york.htm"
+                                    target="_blank"
+                                    >Public transport map</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>About me</h3>
+                        <p>
+                            Hi! My name is Lisa and I've spent my vacation in
+                            New York in 2023. I'm very fond of the city. I
+                            created this page as a part of a project for
+                            SheCodes Responsive to develop my coding skills.
+                        </p>
+                    </div>
+                    <div>
+                        <h3>About this website</h3>
+                        <p>
+                            I created this page as a part of a project for
+                            SheCodes Responsive to develop my coding skills.
+
+                            <br />
+                            This project was coded by
+                            <a
+                                href="https://www.linkedin.com/in/lisalowagie"
+                                target="_blank"
+                                >Lisa Lowagie</a
+                            >
+                            and is open-sourced on
+                            <a
+                                href="https://github.com/LisaLowagie/TravelProject"
+                                target="_blank"
+                                >Github</a
+                            >.
+                        </p>
+                    </div>
+                </section>
             </footer>
         </div>
     </body>
