Added main section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,37 @@
                 <h2>The most popular city in the United States.</h2>
                 <a href="#more">Learn more</a>
             </header>
+            <main>
+                <section class="grid grid-2-columns">
+                    <div>
+                        <img
+                            src="/images/Flat iron building.jpg"
+                            alt="Flat Iron Building"
+                            class="img-responsive"
+                        />
+                    </div>
+                    <div>
+                        <h2>Why New York?</h2>
+                        <h3>New York, the city of secrets.</h3>
+                        <p>
+                            The Hidden Subway Station Under City Hall is an
+                            abandoned 1904 subway station with chandeliers and
+                            stained glass. Closed in 1945 for being too small,
+                            it’s a stunning secret most commuters never see,
+                            except on rare tours or train turnarounds.
+                        </p>
+                        <p>
+                            Staten Island’s “Republic” In 1982, Staten Island’s
+                            Travis neighborhood jokingly declared independence,
+                            complete with a flag and passports. Though
+                            short-lived, their Independence Day parade continues
+                            the quirky tradition.
+                        </p>
+                    </div>
+                </section>
+            </main>
             <footer>
-                <section class="grid">
+                <section class="grid grid-3-columns-with-first-narrow">
                     <div>
                         <h3>More about New York</h3>
                         <ul>
