Added cards html + css

--- a/index.html
+++ b/index.html
@@ -48,6 +48,106 @@
                         </p>
                     </div>
                 </section>
+                <section class="secondary-section">
+                    <h2 class="text-center">Cafés</h2>
+                    <h3 class="text-center">My favorite coffees in New York</h3>
+                    <div class="grid grid-3-columns">
+                        <div class="card">
+                            <div class="card-header">
+                                <img
+                                    src="images/1. Slate café.jpg"
+                                    alt="Slate Café"
+                                    class="img-responsive"
+                                />
+                            </div>
+                            <div class="card-body">
+                                <h4>Slate Café</h4>
+                                <p>
+                                    Slate Cafe is a bustling restaurant and
+                                    coffee bar with locations in NoMad and
+                                    Midtown in NYC.
+                                </p>
+                                <h5>Address</h5>
+                                <p>
+                                    121 Madison Avenue 30th Street, New York
+                                    City, NY 10016
+                                </p>
+                                <h5>What I like about it</h5>
+                                <p>It is women-owned and vegetarian friendly</p>
+                                <div class="card-footer">
+                                    <a
+                                        href="https://www.slatecafe.com/location/nomad/"
+                                        class="btn"
+                                        target="_blank"
+                                        >Find them</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <img
+                                    src="images/2. Marie Belle café.jpg"
+                                    alt="MarieBelle Cacao Bar and Tea Salon"
+                                    class="img-responsive"
+                                />
+                            </div>
+                            <div class="card-body">
+                                <h4>MarieBelle</h4>
+                                <p>
+                                    Enjoy a stress free time in a space
+                                    surrounded by antiques and the scents of
+                                    chocolate and espresso.
+                                </p>
+                                <h5>Address</h5>
+                                <p>
+                                    484 Broome St, New York City, NY 10013-2253
+                                </p>
+                                <h5>What I like about it</h5>
+                                <p>It is women-owned, Hispanic/Latinx owned.</p>
+                                <div class="card-footer">
+                                    <a
+                                        href="https://mariebelle.com/"
+                                        class="btn"
+                                        target="_blank"
+                                        >Find them</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <img
+                                    src="images/3.Stumptown Café.jpg"
+                                    alt="Stumptown Coffee Roasters"
+                                    class="img-responsive"
+                                />
+                            </div>
+                            <div class="card-body">
+                                <h4>Stumptown</h4>
+                                <p>
+                                    It’s that moment when your hand is warmed by
+                                    the mug, you raise it to your nose, and you
+                                    take a sip.
+                                </p>
+                                <h5>Address</h5>
+                                <p>
+                                    W 29th Street, New York City, NY 10001-4502
+                                </p>
+                                <h5>What I like about it</h5>
+                                <p>Direct trade, they know their producers</p>
+                                <div class="card-footer">
+                                    <a
+                                        href="https://www.stumptowncoffee.com/pages/new-york-ace-hotel-cafe"
+                                        class="btn"
+                                        target="_blank"
+                                        >Find them</a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
             <footer>
                 <section class="grid grid-3-columns-with-first-narrow">
