--- a/index.html
+++ b/index.html
@@ -53,12 +53,20 @@
                     <h3 class="text-center">My favorite coffees in New York</h3>
                     <div class="grid grid-3-columns">
                         <div class="card">
-                            <div class="card-header">
+                            <div class="card-header grid grid-2-columns">
                                 <img
                                     src="images/1. Slate café.jpg"
                                     alt="Slate Café"
-                                    class="img-responsive"
+                                    class="img-responsive embed"
                                 />
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.7595041340082!2d-73.98717428720782!3d40.74531713545411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a7db99345b%3A0x141b0fc17cb49408!2s111%20Madison%20Ave%2C%20New%20York%2C%20NY%2010016%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1733677231291!5m2!1sfr!2sfr"
+                                    class="embed"
+                                    style="border: 0"
+                                    allowfullscreen=""
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"
+                                ></iframe>
                             </div>
                             <div class="card-body">
                                 <h4>Slate Café</h4>
@@ -85,12 +93,20 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card-header">
+                            <div class="card-header grid grid-2-columns">
                                 <img
                                     src="images/2. Marie Belle café.jpg"
                                     alt="MarieBelle Cacao Bar and Tea Salon"
-                                    class="img-responsive"
+                                    class="img-responsive embed"
                                 />
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.7687100289068!2d-74.0055282872085!3d40.72310783681438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2598b878b6565%3A0xb7bb7aaceb2f75f0!2s501%20Broome%20St%2C%20New%20York%2C%20NY%2010013%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1733677330299!5m2!1sfr!2sfr"
+                                    class="embed"
+                                    style="border: 0"
+                                    allowfullscreen=""
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"
+                                ></iframe>
                             </div>
                             <div class="card-body">
                                 <h4>MarieBelle</h4>
@@ -116,12 +132,20 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card-header">
+                            <div class="card-header grid grid-2-columns">
                                 <img
                                     src="images/3.Stumptown Café.jpg"
                                     alt="Stumptown Coffee Roasters"
-                                    class="img-responsive"
+                                    class="img-responsive embed"
                                 />
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45060306.91979326!2d-129.94270854999996!3d46.42366899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a61c75684f%3A0x79d31adb123348d2!2sStumptown%20Coffee%20Roasters!5e0!3m2!1sfr!2sfr!4v1733677303364!5m2!1sfr!2sfr"
+                                    class="embed"
+                                    style="border: 0"
+                                    allowfullscreen=""
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"
+                                ></iframe>
                             </div>
                             <div class="card-body">
                                 <h4>Stumptown</h4>
