Activate learn more link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         />
                     </div>
                     <div>
+                        <a name="more"></a>
                         <h2>Why New York?</h2>
                         <h3>New York, the city of secrets.</h3>
                         <p>
